--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 streamlit
-requests>=2.32.2
-googlemaps==4.10.0
+requests
 pandas==2.1.3
 numpy==1.26.2
-geopy==2.4.1
-pydantic==2.5.0
-bs4
-python-dotenv
 scikit-learn
+googlemaps
+python-dotenv
+beautifulsoup4
